Se sube cambio en css de ejercicio Nuestras coders

--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Nuestras Coders</title>
+    <title>Brave Coders</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC" rel="stylesheet">
   </head>
   <body>
+    <script src="./js/app.js"></script>
+      <h2>Nuestras Coders, Brave Coders</h2>
+      <hr>
+      <section>
+          <div class="luly retrato">
+            <img src="Assets\img\lully.jpeg" alt="Assets\img\a8022006b463b5ed9be5a62f1bdbac43b4f3dbd5c6b3bb44707fe5f5e26635b0.jpg">
+            <p>Luly Atilano</p>
+          </div>
+          <div class="Eli retrato">
+            <img src="Assets\img\Lain.jpg" alt="Assets\img\a8022006b463b5ed9be5a62f1bdbac43b4f3dbd5c6b3bb44707fe5f5e26635b0.jpg">
+            <p>Elizabeth Vera</p>
+          </div>
+          <div class="dulce retrato">
+            <img src="Assets\img\dulce.jpeg" alt="Assets\img\a8022006b463b5ed9be5a62f1bdbac43b4f3dbd5c6b3bb44707fe5f5e26635b0.jpg">
+            <p>Dulce Lemus</p>
+          </div>
+      </section>
+      <section>
+          <div class="retrato" id="Blanca">
+            <img src="Assets\img\blanca.jpeg" alt="Assets\img\a8022006b463b5ed9be5a62f1bdbac43b4f3dbd5c6b3bb44707fe5f5e26635b0.jpg">
+            <p>Blanca Valencia</p>
+          </div>
+      </section>
+      <section>
+          <div class="mar retrato">
+            <img src="Assets\img\mar.jpeg" alt="Assets\img\a8022006b463b5ed9be5a62f1bdbac43b4f3dbd5c6b3bb44707fe5f5e26635b0.jpg">
+            <p>Mar Rodry</p>
+          </div>
+          <div class="fancia retrato">
+            <img src="Assets\img\Francia.jpeg" alt="Assets\img\a8022006b463b5ed9be5a62f1bdbac43b4f3dbd5c6b3bb44707fe5f5e26635b0.jpg">
+            <p>Fracias Vazquez</p>
+          </div>
+          <div class="sarah retrato">
+            <img src="Assets\img\sarah.jpeg" alt="Assets\img\a8022006b463b5ed9be5a62f1bdbac43b4f3dbd5c6b3bb44707fe5f5e26635b0.jpg">
+            <p>Sarah Ruiz</p>
+          </div>
+      </section>
+
 
   </body>
 </html>
